--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World, QuitIt!</string>
-    <string name="app_name">QuitIt</string>
+    <string name="hello">QuitIt!</string>
+    <string name="app_name">QuitIt!</string>
     <!-- A -->
 	<string name="about">About</string>
 	<string name="about_information">The Quit It application is intended to keep track of how many days you have been nicotine, alcohol, or drug free.  I, the developer, plan on adding more functionality to this application and would welcome any comments/suggestions.</string>
 	
+	<!-- B -->
+	<string name="back">Back</string>
 	<!-- C -->
 	<string name="contact">Contact Information</string>
     <string name="contact_info">Use the Menu button to send an email.</string>
@@ -18,6 +20,7 @@
     <string name="email_us">Email Us</string>
 	
 	<!-- S -->
+	<string name="settings">Settings</string>
 	<string name="status_bar_notifications_default">This is a status bar notification</string>
 	<string name="status_bar_notifications_happy_message">I am happy</string>
     <string name="status_bar_notifications_ok_message">I am ok</string>
